tests/functional/lang/parse-fail-unexpected-impl.err.exp
error: syntax error, unexpected '->'
       at «stdin»:1:1:
            1| -> x
             | ^
            2|
